[gd_scene load_steps=14 format=3 uid="uid://b2h471akbt1ba"]

[ext_resource type="Texture2D" uid="uid://bvceqm63ihpdl" path="res://Assets/Animals/Chicken/Chicken.png" id="1_egs44"]
[ext_resource type="Script" path="res://Script/npc.gd" id="1_wspd4"]
[ext_resource type="PackedScene" uid="uid://c83e3s1gq2rdw" path="res://dialogue/dialogue.tscn" id="2_15vcd"]
[ext_resource type="Texture2D" uid="uid://deplvexolvxeb" path="res://Assets/Animals/Chicken/Chicken - Copia.png" id="3_clwwt"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nqsy6"]
size = Vector2(13, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_nn4v5"]
atlas = ExtResource("1_egs44")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sod0a"]
atlas = ExtResource("1_egs44")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_narxt"]
atlas = ExtResource("1_egs44")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2b83w"]
atlas = ExtResource("1_egs44")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o2jal"]
atlas = ExtResource("3_clwwt")
region = Rect2(32, 0, 32, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_h38ig"]
atlas = ExtResource("3_clwwt")
region = Rect2(0, 0, 32, 30)

[sub_resource type="SpriteFrames" id="SpriteFrames_p7bwq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nn4v5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sod0a")
}],
"loop": true,
"name": &"idle",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_narxt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2b83w")
}],
"loop": true,
"name": &"walk_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o2jal")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h38ig")
}],
"loop": true,
"name": &"walk_right",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_fnm4i"]
radius = 12.0416

[node name="NPC" type="CharacterBody2D"]
script = ExtResource("1_wspd4")

[node name="collision" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 4)
shape = SubResource("RectangleShape2D_nqsy6")

[node name="animation" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_p7bwq")
animation = &"walk_left"
autoplay = "idle"
frame_progress = 0.227679

[node name="chat_detection_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="chat_detection_area"]
position = Vector2(0, 2)
shape = SubResource("CircleShape2D_fnm4i")

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Dialogue" parent="." instance=ExtResource("2_15vcd")]

[connection signal="body_entered" from="chat_detection_area" to="." method="_on_chat_detection_area_body_entered"]
[connection signal="body_exited" from="chat_detection_area" to="." method="_on_chat_detection_area_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="dialogue_finished" from="Dialogue" to="." method="_on_dialogue_dialogue_finished"]
